# pdf-stamper

./: .gitignore  USAGE.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: CLAUDE.md  settings.json
.claude/agents/: README.md  build-error-resolver.md  code-reviewer.md  coder.md  coordinate-fixer.md  pdf-debugger.md  planner.md  release-builder.md  rust-build-resolver.md  tauri-ipc-debugger.md  test-writer.md  ui-tweaker.md
.claude/commands/: analyze.md  blueprint.md  diagnose.md  fix-build.md  implement.md  review.md  scaffold.md  security-check.md
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pdf.rs
src/components/: file-list.tsx  preview-pane.tsx  stamp-controls.tsx
src/services/: coordinate-utils.ts  pdf-bridge.ts
src/stores/: pdf-store.ts  stamp-store.ts
