[package]
name = "pdf-stamper"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdf_stamper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
lopdf = { version = "0.34", features = ["embed_image"] }
pdfium-render = "0.8"
image = "0.25"
base64 = "0.22"
